// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Site Service when retrieving a dive site will return the requested dive site 1`] = `
{
  "averageDifficulty": 2.02,
  "averageRating": 2.31,
  "createdOn": 2023-07-10T15:43:49.759Z,
  "creator": {
    "memberSince": 2024-01-08T13:24:58.620Z,
    "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
    "username": "Joe.Regular",
  },
  "depth": {
    "depth": 37,
    "unit": "ft",
  },
  "description": "Aut eos ratione qui. Corporis rerum aspernatur repudiandae delectus reprehenderit aspernatur accusamus distinctio excepturi. Magni labore deserunt. Officia ipsam enim occaecati consequuntur ex deserunt tempora minima. Tenetur velit aliquid in sint fuga impedit impedit.",
  "directions": "At facere rem totam. Hic maxime odio recusandae maxime vitae. Dolor odit ad accusantium sunt eaque. Quis accusamus doloremque autem facilis repellat provident. Mollitia modi optio optio.",
  "freeToDive": false,
  "gps": {
    "lat": -20.3328,
    "lon": -5.8212,
  },
  "id": "0117345c-2b6e-4c1a-a9f8-bcfba081be57",
  "location": "Elkhart",
  "name": "Enhanced even",
  "shoreAccess": true,
  "updatedOn": undefined,
}
`;

exports[`Dive Site Service when searching dive sites Will sort by name in asc order 1`] = `
[
  {
    "name": "Administrator Palladium",
    "rating": 3.79,
  },
  {
    "name": "Architect innovative",
    "rating": 1.19,
  },
  {
    "name": "Auto Coupe",
    "rating": 4.3,
  },
  {
    "name": "Auto Moscovium",
    "rating": 4.13,
  },
  {
    "name": "B2C Hatchback",
    "rating": 4.54,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by name in desc order 1`] = `
[
  {
    "name": "yahoo bluetooth",
    "rating": 4.84,
  },
  {
    "name": "within aspernatur",
    "rating": 4.97,
  },
  {
    "name": "withdrawal and",
    "rating": 1.87,
  },
  {
    "name": "whoa minima",
    "rating": 2.84,
  },
  {
    "name": "wherever because",
    "rating": 4.33,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in asc order 1`] = `
[
  {
    "name": "ivory politely",
    "rating": 1.01,
  },
  {
    "name": "paradigm strategic",
    "rating": 1.03,
  },
  {
    "name": "connect Gasoline",
    "rating": 1.05,
  },
  {
    "name": "male New",
    "rating": 1.06,
  },
  {
    "name": "Electronics redundant",
    "rating": 1.12,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in desc order 1`] = `
[
  {
    "name": "within aspernatur",
    "rating": 4.97,
  },
  {
    "name": "South Country",
    "rating": 4.95,
  },
  {
    "name": "Toyota synergistic",
    "rating": 4.94,
  },
  {
    "name": "Burgs Buckinghamshire",
    "rating": 4.9,
  },
  {
    "name": "Chicken perspiciatis",
    "rating": 4.85,
  },
]
`;

exports[`Dive Site Service when searching dive sites will allow pagination of results 1`] = `
[
  "Shirt program",
  "Soap Renner",
  "Soft Gloves",
  "South Country",
  "South Northeast",
  "South Quality",
  "Southeast and",
  "Southeast sympathetically",
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using long distance 1`] = `
[
  {
    "lat": -71.9617,
    "lon": -117.1325,
  },
  {
    "lat": -70.0749,
    "lon": -116.9587,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using medium distance 1`] = `
[
  {
    "lat": -70.0749,
    "lon": -116.9587,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using short distance 1`] = `
[
  {
    "lat": -70.0749,
    "lon": -116.9587,
  },
]
`;

exports[`Dive Site Service when searching dive sites will perform text-based searches 1`] = `
[
  {
    "averageDifficulty": 3.43,
    "averageRating": 4.52,
    "createdOn": 2019-03-19T01:14:04.542Z,
    "creator": {
      "memberSince": 2019-04-26T02:22:55.498Z,
      "userId": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 29.2,
      "unit": "m",
    },
    "description": "Incidunt cum repellat illo molestiae voluptate aspernatur labore. Cum velit natus minus assumenda fugit debitis eos nam at.",
    "directions": "Delectus deleniti ducimus earum vel numquam reprehenderit modi.",
    "freeToDive": true,
    "gps": {
      "lat": -33.07,
      "lon": -85.12,
    },
    "id": "bbd21b2b-85d2-47fe-b4a2-dfd980172ed8",
    "location": "North Lauderdale Luxembourg",
    "name": "ethical savings",
    "shoreAccess": false,
    "updatedOn": 2023-02-02T08:27:28.861Z,
  },
  {
    "averageDifficulty": 2.55,
    "averageRating": 4,
    "createdOn": 2023-01-06T16:56:05.573Z,
    "creator": {
      "memberSince": 2017-09-20T17:24:23.460Z,
      "userId": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "depth": {
      "depth": 93.3,
      "unit": "ft",
    },
    "description": "Officiis fugiat repellendus voluptatem facere doloribus autem sapiente quas. Aperiam non distinctio rem aperiam saepe quae soluta adipisci dolores.",
    "directions": "Perspiciatis praesentium inventore deserunt sed laboriosam quas officia.",
    "freeToDive": false,
    "gps": {
      "lat": -31.96,
      "lon": -7.2,
    },
    "id": "f8b954ff-709b-43bc-aade-21a6f6906cce",
    "location": "Fargo Georgia",
    "name": "inexperienced scimitar",
    "shoreAccess": true,
    "updatedOn": 2022-02-17T12:52:47.102Z,
  },
]
`;
